--- a/templates/objects/list.html
+++ b/templates/objects/list.html
@@ -10,7 +10,13 @@
           
           <h2 class='mb-3'>
             <span class='title'>{{objs}}</span>
-            <button type="button" class="btn add-object js-create-object" data-url="{% url obj|add:'_create' %}" id="{{obj}}"><a>+</a></button>
+            
+            {% if obj == 'template' %}
+              <a href='{% url "template_create" %}'><button type="button" class="btn add-object" id="{{obj}}">+</button></a>
+            {% else %}
+              <button type="button" class="btn add-object js-create-object" data-url="{% url obj|add:'_create' %}" id="{{obj}}"><a>+</a></button>
+            {% endif %}
+            
             <a href="{% url 'export_'|add:objs %}"><div class='icon-export'><img src='{% static "events/img/export.svg" %}' alt="Export Icon" /></div></a>
           </h2>
           
