--- a/schedules/templates/event_templates/template_list.html
+++ b/schedules/templates/event_templates/template_list.html
@@ -20,9 +20,12 @@
       <td>0</td>
       <td>0</td>
       <td>
-        <button type="button" class="btn js-update-object" data-url="{% url 'template_update' template.id %}">
-          <img class='icon-edit 'src='{% static "events/img/edit.svg" %}' alt="Edit Icon"/>
-        </button>
+        <a href='{% url "template_update" template.id %}'>
+          <button type="button" class="btn">
+            <img class='icon-edit 'src='{% static "events/img/edit.svg" %}' alt="Edit Icon"/>
+          </button>
+        </a>
+        
         <button type="button" class="btn js-delete-object" data-url="{% url 'template_delete' template.id %}">
           <img class='icon-delete 'src='{% static "events/img/delete.svg" %}' alt="Delete Icon"/>
         </button>
