--- a/schedules/templates/schedules/template.html
+++ b/schedules/templates/schedules/template.html
@@ -2,8 +2,7 @@
 <div class='row mx-auto'>
     <div class='col col-12'>
       <div class='card-columns mx-4'>
-
-        {% for location, attributes in locations.items %}
+        {% for location, attributes in roster.items %}
             {% if attributes.active %}
               {% with position=attributes.positions bar=attributes.bar active=attributes.active location_verbose=attributes.location location_id=location %}
                 {% include 'events/detail/location_card.html' %}
