--- a/events/templates/events/detail/event_detail.html
+++ b/events/templates/events/detail/event_detail.html
@@ -5,7 +5,7 @@
 <div class='container px-0'>
   {% include 'events/detail/header/event_header.html' with template=template %}
   
-  <div class='container' style='background:white;'>
+  <div class='container event-body' style='background:white;'>
     <div class='col-12 py-3 control-panel-header'>
       <span>SCHEDULE</span>
       <a class='ml-2' data-toggle="collapse" href="#collapseCP" role="button" style='font-size:.6em; color:black;text-transform:uppercase;'><span>[Control Panel]</span>
@@ -33,13 +33,13 @@
   <div class='row mx-auto schedule-cards'>
     <div class='col col-12'>
       <div class='card-columns mx-4'>
-      {% for x, y in roster.items %}
-        {% for location, attributes in y.items %}
-          {% with position=attributes.positions bar=attributes.bar active=attributes.active location_verbose=attributes.location location_id=location %}
-            {% include 'events/detail/location_card.html' %}
-          {% endwith %}
+        {% for location, attributes in roster.items %}
+          {% if attributes.active %}
+            {% with position=attributes.positions bar=attributes.bar active=attributes.active location_verbose=attributes.location location_id=location %}
+              {% include 'events/detail/location_card.html' %}
+            {% endwith %}
+          {% endif %}
         {% endfor %}
-      {% endfor %}
       </div>
       <hr />
     </div>
