Add 'active locations' to Schedule model

--- a/events/templates/events/detail/header/event_header.html
+++ b/events/templates/events/detail/header/event_header.html
@@ -10,8 +10,10 @@
     <div class='event-header-details'>
     
     <a class='event-title' id='{{event.id}}'>{{event.title}}</a><br />
+    <a class='event-timestamps' style='font-size:1.2em;'>Created at: {{event.created}} | Last saved: {{event.modified}}</a><br />
     <a class='event-date' style='font-size:1.2em;'>{{event.date}}</a><br />
-    <a class='event-doors' style='font-size:1.2em;'>Doors Open at {{event.doors_open}}</a>
+    <a class='event-doors' style='font-size:1.2em;'>Doors Open at {{event.doors_open}}</a><br />
+    
     
     </div>
         
