--- a/schedules/templates/event_templates/template_list.html
+++ b/schedules/templates/event_templates/template_list.html
@@ -6,8 +6,7 @@
     <tr class='header'>
       <th onclick="sortTable(0)" scope="col"><a>Title</a></th>
       <th onclick="sortTable(1)" scope="col"><a>Bar Active</a></th>
-      <th onclick="sortTable(2)" scope="col"><a># of Locations</a></th>
-      <th onclick="sortTable(3)" scope="col"><a># of Shifts</a></th>
+      <th onclick="sortTable(2)" scope="col"><a>Active Locations</a></th>
       <th scope="col">Edit</th>
     </tr>
   </thead>
@@ -17,8 +16,7 @@
     <tr>
       <td>{{template.title}}</td>
       <td>{% include 'base/boolean.html' with bool=template.template %}</td>
-      <td>0</td>
-      <td>0</td>
+      <td>{% firstof template.active_locations '0' %}</td>
       <td>
         <a href='{% url "template_update" template.id %}'>
           <button type="button" class="btn">
