--- a/events/templates/events/detail/event_detail.html
+++ b/events/templates/events/detail/event_detail.html
@@ -5,7 +5,7 @@
 <div class='container px-0'>
   {% include 'events/detail/header/event_header.html' with template=template %}
   
-  <div class='container event-body' style='background:white;'>
+  <div class='container roster-body' style='background:white;'>
     <div class='col-12 py-3 control-panel-header'>
       <span>SCHEDULE</span>
       <a class='ml-2' data-toggle="collapse" href="#collapseCP" role="button" style='font-size:.6em; color:black;text-transform:uppercase;'><span>[Control Panel]</span>
