--- a/events/templates/events/detail/header/event_header.html
+++ b/events/templates/events/detail/header/event_header.html
@@ -10,7 +10,10 @@
     <div class='event-header-details'>
     
     <a class='event-title' id='{{event.id}}'>{{event.title}}</a><br />
-    <a class='event-timestamps' style='font-size:1.2em;'>Created at: {{event.created}} | Last saved: {{event.modified}}</a><br />
+    <a class='event-timestamps' style='font-size:1.2em;'>
+      Created at: {{event.schedule.created}}
+      {% if event.schedule.modified is not None %} | Last modified: {{event.schedule.modified}} {% endif %}
+    </a><br />
     <a class='event-date' style='font-size:1.2em;'>{{event.date}}</a><br />
     <a class='event-doors' style='font-size:1.2em;'>Doors Open at {{event.doors_open}}</a><br />
     
