Add rudimentary logic for schedule model's 'shift' attribute for future schedule look-up by employee

--- a/events/templates/events/detail/header/control_panel/update_template.html
+++ b/events/templates/events/detail/header/control_panel/update_template.html
@@ -7,11 +7,11 @@
 
     <div class="input-group mt-3">
       <select class="custom-select" id="template-category">
-        <option value="0" selected>Template Category...</option>
+        <option value="0" selected>Category...</option>
         
-        <option value="1">Reset to Last Save</option>
-        <option value="2">Populate with Different Event</option>
-        <option value="3">Reset to Blank Template</option>
+        <option value="1">Last Save</option>
+        <option value="2">Event Roster</option>
+        <option value="3">Template</option>
       </select>
     </div>
   
@@ -23,11 +23,10 @@
           <option value="1">Click 'Submit'</option>
           <option value="2" id='previous-events'>See Past Events...</option>
           <option value="2" id='future-events'>See Future Events...</option>
-          <option value="3"></option>
-          <option value="3" id='all-templates'>See More...</option>
+          <option value="3" id='all-templates'>Click 'Submit'</option>
         </select>
         <div class="input-group-append">
-          <button class="btn btn-dark choose-template" data-toggle="modal" data-target="#exampleModal" type="button">Update</button>
+          <button class="btn btn-dark choose-template" data-toggle="modal" data-target="#exampleModal" type="button">Submit</button>
         </div>
       </div>
     </fieldset>
