--- a/employees/templates/employees/employee_list.html
+++ b/employees/templates/employees/employee_list.html
@@ -44,8 +44,7 @@
   <tbody>
   {% for employee in employees %}
     <tr>
-
-      <td>{{employee.employee_id}}</td>
+      <td><strong><a href='{% url "employee_schedule" employee.employee_id %}'>{{employee.employee_id}}</a></strong></td>
       <td>{{employee.first_name}}</td>
       <td>{{employee.last_name}}</td>
       <td>{{employee.phone}}</td>
