Fix deprecation between template and event rosters

--- a/employees/templates/employees/employee_schedule.html
+++ b/employees/templates/employees/employee_schedule.html
@@ -55,10 +55,14 @@
                   <strong>Doors: </strong>{{attributes.details.doors}}<br />
                 </td>
                 {% if scheduled %}
-                  <td>
-                    <strong>Location: </strong>{{attributes.shift.location}}<br />
-                    <strong>Role: </strong>{{attributes.shift.verbose_name}}
-                  </td>
+                  {% if attributes.shift.location %}
+                      <td>
+                        <strong>Location: </strong>{{attributes.shift.location}}<br />
+                        <strong>Role: </strong>{{attributes.shift.verbose_name}}
+                      </td>
+                  {% else %}
+                    <td>Not currently scheduled for this event.</td>
+                  {% endif %}
                 {% endif %}
               </tr>
             {% endfor %}
