--- a/events/templates/events/detail/location_card.html
+++ b/events/templates/events/detail/location_card.html
@@ -23,7 +23,7 @@
           {% if not template %}
             <select class="col form-control" style='flex: 0 0 50%;max-width: 50%;'>
               {% if not scheduled.employee %}
-              <option value='{{shift}}' class='{{shift}}' default selected>{{ scheduled.verbose_name }}</option>
+              <option value='{{shift}}' class='{{shift}} default-position' default selected>{{ scheduled.verbose_name }}</option>
               {% else %}
               <option value='{{scheduled.employee}}' class='{{shift}}' selected>{{ scheduled.employee }}</option>
               {% endif %}
