--- a/templates/base/boolean.html
+++ b/templates/base/boolean.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 
 {% if bool %}
-  <img class='icon-true' src='{% static "img/check.svg" %}' alt="True"/></a>
+  <img class='icon-true' src='{% static "img/yes.png" %}' alt="True"/></a>
 {% else %}
-  <img class='icon-false' src='{% static "img/cancel.svg" %}' alt="False"/></a>
+  <img class='icon-false' src='{% static "img/no.png" %}' alt="False"/></a>
 {% endif %}
