--- a/templates/objects/create.html
+++ b/templates/objects/create.html
@@ -3,7 +3,7 @@
 <form method="post" action="{% url obj|add:'_create' %}" class="js-object-create-form">
   {% csrf_token %}
   <div class="modal-header">
-    <h4 class="modal-title">Create {{obj}}</h4>
+    <h4 class="modal-title">Create {{obj|title}}</h4>
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
