--- a/templates/objects/list.html
+++ b/templates/objects/list.html
@@ -12,12 +12,14 @@
             <span class='title'>{{objs}}</span>
             
             {% if obj == 'template' %}
-              <a href='{% url "template_create" %}'><button type="button" class="btn add-object" id="{{obj}}">+</button></a>
+              <a href='{% url "template_create" %}'><div class='icon-export btn' style='vertical-align:top;'><img src='{% static "img/plus.png" %}' alt="Add Object Icon" /></div></a>
             {% else %}
-              <button type="button" class="btn add-object js-create-object" data-url="{% url obj|add:'_create' %}" id="{{obj}}"><a>+</a></button>
+                <div class='icon-export btn add-object js-create-object' style='vertical-align:top;' data-url="{% url obj|add:'_create' %}">
+                  <img src='{% static "img/plus.png" %}' alt="Add Object Icon" />
+                </div>
             {% endif %}
             
-            <a href="{% url 'export_'|add:objs %}"><div class='icon-export'><img src='{% static "img/export.svg" %}' alt="Export Icon" /></div></a>
+            <a href="{% url 'export_'|add:objs %}"><div class='icon-export btn' style='vertical-align:top; float:right;' ><img src='{% static "img/download.png" %}' alt="Export Icon" /></div></a>
           </h2>
           
           <div class="modal fade hide" id="modal-object" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
