--- a/templates/objects/update.html
+++ b/templates/objects/update.html
@@ -3,7 +3,7 @@
 <form method="post" action="{% url obj|add:'_update' form.instance.pk %}" class="js-object-update-form">
   {% csrf_token %}
   <div class="modal-header">
-    <h4 class="modal-title">Update {{obj}}</h4>
+    <h4 class="modal-title">Update {{obj|title}}</h4>
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
