--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -1,11 +1,9 @@
+{% load staticfiles %}
 <nav class="navbar navbar-expand-lg navbar-dark background-container mb-0">
   <div class="container">
-  <a class="navbar-brand" href="#">Spokarena</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <a class="navbar-brand" href="#">
+      <img class='company-logo' src='{% static "img/logo.png" %}' alt="Company Logo"/></a>
+    </a>
     <ul class="navbar-nav mr-auto">
       <li class="nav-item"><a class="nav-link" href="/company/profile">Profile</a></li>
       <li class="nav-item"><a class="nav-link" href="/events">Events</a></li>
@@ -18,6 +16,5 @@
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
     </form>
-  </div>
   </div>
 </nav>
